Update index.html with new quick links (temporary?)

--- a/src/index.html
+++ b/src/index.html
@@ -13,50 +13,30 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a
-				href="https://www.roblox.com/games/7547610878/Into-the-Wilderness"
-				>Roblox</a
-			>
-			<a href="https://github.com/AtomicChocolate">Programming</a>
-			<a href="/contact.html">About/Contact</a>
+			<a href="/blog">Blog</a>
+			<a href="/contact.html">Contact</a>
 		</nav>
 		<main>
 			<h2>Quick Links</h2>
 			<dl>
 				<dt>
-					<img
-						src="assets/icons/bloxxer.gif"
-						alt="Into the Wilderness Icon"
-						class="icon"
-					/>
-					<a
-						href="https://www.roblox.com/games/7547610878/Into-the-Wilderness"
-						>Into the Wilderness</a
-					>
+					<img src="assets/icons/textarea.ico" alt="Textarea.site icon" class="icon">
+					<a href="https://textarea.site">textarea.site</a>
 				</dt>
-				<dd>My game on Roblox, currently in development.</dd>
-				<dt>
-					<img
-						src="assets/icons/trello.png"
-						alt="Trello Icon"
-						class="icon"
-					/>
-					<a href="https://trello.com/b/tYLvj4cW/into-the-wilderness"
-						>Into the Wilderness - Trello</a
-					>
-				</dt>
-				<dd>Track the development progress of my game using Trello.</dd>
+				<dd>A simple textbox to instantly start writing.</dd>
 				<dt>
 					<img
 						src="assets/icons/github.png"
-						alt="GitHub Icon"
+						alt="GitHub icon"
 						class="icon"
 					/>
 					<a href="https://github.com/AtomicChocolate">My GitHub</a>
 				</dt>
 				<dd>The place I host my code.</dd>
 			</dl>
-			<p>This website is still under construction.</p>
+			<hr>
+			<!-- too lazy to add a simple CSS style for this... it's temporary ;) -->
+			<p><b><i>Uhh... check back later. I'm working on things!</i></b></p>
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
