Add Twitter link to footer of contact.html like with other pages

--- a/src/contact.html
+++ b/src/contact.html
@@ -14,9 +14,7 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a href="/roblox.html">Roblox</a>
-			<a href="/software.html">Programming</a>
-			<a href="/contact.html">About/Contact</a>
+			<a href="/contact.html">Contact</a>
 		</nav>
 		<main>
 			<p>
@@ -101,6 +99,7 @@
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
+			<a href="https://twitter.com/real__jame">@get__real</a>
 		</footer>
 	</body>
 </html>
