Add a new item to the Q&A list

--- a/src/contact.html
+++ b/src/contact.html
@@ -22,8 +22,6 @@
 				on making computers do funny things and learning how to do so.
 			</p>
 
-			<h2>Possible Questions</h2>
-
 			<ul>
 				<details>
 					<summary>"jame"?</summary>
@@ -59,6 +57,10 @@
 							know how to make websites/servers from scratch.
 						</li>
 					</ul>
+				</details>
+				<details>
+					<summary>I want to chat! Or maybe just say hi?</summary>
+					<p>Good idea! Get in touch with me, I'm down to discuss anything.</p>
 				</details>
 				<details>
 					<summary>A question not listed here:</summary>
