Rename About/Contact page to About

--- a/src/contact.html
+++ b/src/contact.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>About Me</h1>
+			<h1>Contact</h1>
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
@@ -18,24 +18,23 @@
 		</nav>
 		<main>
 			<p>
-				Hello, I'm James, also known as Atomic online. Currently working
-				on making computers do funny things and learning how to do so.
+				Hello, I'm James, also known as Atomic online. Currently working on
+				making computers do funny things and learning how to do so.
 			</p>
 
 			<ul>
 				<details>
 					<summary>"jame"?</summary>
 					<p>
-						Jame is a nickname between me and my friends, becuase it
-						sounds funny to say. (Try it!)
+						Jame is a nickname between me and my friends, becuase it sounds
+						funny to say. (Try it!)
 					</p>
 					<p>
-						When I wanted to make a website, I had a bunch of ideas
-						for domain names. Sadly, a lot of "jame".tld names were
-						already taken - jame.com, jame.dev. Others are super
-						expensive due to such a short domain name. I had an idea
-						to use "ja.me", but of course that was taken along with
-						all other 2-letter domain names. So, I simply added
+						When I wanted to make a website, I had a bunch of ideas for domain
+						names. Sadly, a lot of "jame".tld names were already taken -
+						jame.com, jame.dev. Others are super expensive due to such a short
+						domain name. I had an idea to use "ja.me", but of course that was
+						taken along with all other 2-letter domain names. So, I simply added
 						"real" to the start and here we are :-)
 					</p>
 				</details>
@@ -44,17 +43,16 @@
 					<p>A few reasons:</p>
 					<ul>
 						<li>
-							Practice setting up a Linux machine as a webserver.
-							I learned how to use Docker and Docker Compose after
-							doing this as well.
+							Practice setting up a Linux machine as a webserver. I learned how
+							to use Docker and Docker Compose after doing this as well.
 						</li>
 						<li>
-							Make a personal website that's easy to link to for
-							people to know about me and my creations.
+							Make a personal website that's easy to link to for people to know
+							about me and my creations.
 						</li>
 						<li>
-							Probably would look good as a resume to show that I
-							know how to make websites/servers from scratch.
+							Probably would look good as a resume to show that I know how to
+							make websites/servers from scratch.
 						</li>
 					</ul>
 				</details>
@@ -71,23 +69,15 @@
 			<h2>Contact Me</h2>
 			<dl>
 				<dt>
-					<img
-						src="assets/icons/discord.png"
-						alt="Discord Icon"
-						class="icon"
-					/>
+					<img src="assets/icons/discord.png" alt="Discord Icon" class="icon" />
 					<i>Atomic#3218</i>
 				</dt>
 				<dd>
-					Discord is my primary means of communication. I will notice
-					and respond to messages here the fastest.
+					Discord is my primary means of communication. I will notice and
+					respond to messages here the fastest.
 				</dd>
 				<dt>
-					<img
-						src="assets/icons/twitter.png"
-						alt="Twitter Icon"
-						class="icon"
-					/>
+					<img src="assets/icons/twitter.png" alt="Twitter Icon" class="icon" />
 					<a href="https://twitter.com/real__jame">Twitter</a>
 				</dt>
 				<dd>I'm also on Twitter, feel free to send me a DM.</dd>
