--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 		<nav>
 			<a href="/index.html">Home</a>
 			<a href="/blog">Blog</a>
-			<a href="/contact.html">Contact</a>
+			<a href="/contact.html">About</a>
 		</nav>
 		<main>
 			<h2>Quick Links</h2>
