--- a/src/contact.html
+++ b/src/contact.html
@@ -4,17 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact - realja.me</title>
+		<title>About - realja.me</title>
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="shortcut icon" href="assets/icons/bloxxer.gif" />
 	</head>
 	<body>
 		<header>
-			<h1>Contact</h1>
+			<h1>About</h1>
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a href="/contact.html">Contact</a>
+			<a href="/contact.html">About</a>
 		</nav>
 		<main>
 			<p>
@@ -22,49 +22,47 @@
 				making computers do funny things and learning how to do so.
 			</p>
 
-			<ul>
-				<details>
-					<summary>"jame"?</summary>
-					<p>
-						Jame is a nickname between me and my friends, becuase it sounds
-						funny to say. (Try it!)
-					</p>
-					<p>
-						When I wanted to make a website, I had a bunch of ideas for domain
-						names. Sadly, a lot of "jame".tld names were already taken -
-						jame.com, jame.dev. Others are super expensive due to such a short
-						domain name. I had an idea to use "ja.me", but of course that was
-						taken along with all other 2-letter domain names. So, I simply added
-						"real" to the start and here we are :-)
-					</p>
-				</details>
-				<details>
-					<summary>Why a website?</summary>
-					<p>A few reasons:</p>
-					<ul>
-						<li>
-							Practice setting up a Linux machine as a webserver. I learned how
-							to use Docker and Docker Compose after doing this as well.
-						</li>
-						<li>
-							Make a personal website that's easy to link to for people to know
-							about me and my creations.
-						</li>
-						<li>
-							Probably would look good as a resume to show that I know how to
-							make websites/servers from scratch.
-						</li>
-					</ul>
-				</details>
-				<details>
-					<summary>I want to chat! Or maybe just say hi?</summary>
-					<p>Good idea! Get in touch with me, I'm down to discuss anything.</p>
-				</details>
-				<details>
-					<summary>A question not listed here:</summary>
-					<p>Contact me!</p>
-				</details>
-			</ul>
+			<details>
+				<summary>"jame"?</summary>
+				<p>
+					Jame is a nickname between me and my friends, becuase it sounds funny
+					to say. (Try it!)
+				</p>
+				<p>
+					When I wanted to make a website, I had a bunch of ideas for domain
+					names. Sadly, a lot of "jame".tld names were already taken - jame.com,
+					jame.dev. Others are super expensive due to such a short domain name.
+					I had an idea to use "ja.me", but of course that was taken along with
+					all other 2-letter domain names. So, I simply added "real" to the
+					start and here we are :-)
+				</p>
+			</details>
+			<details>
+				<summary>Why a website?</summary>
+				<p>A few reasons:</p>
+				<ul>
+					<li>
+						Practice setting up a Linux machine as a webserver. I learned how to
+						use Docker and Docker Compose after doing this as well.
+					</li>
+					<li>
+						Make a personal website that's easy to link to for people to know
+						about me and my creations.
+					</li>
+					<li>
+						Probably would look good as a resume to show that I know how to make
+						websites/servers from scratch.
+					</li>
+				</ul>
+			</details>
+			<details>
+				<summary>I want to chat! Or maybe just say hi?</summary>
+				<p>Good idea! Get in touch with me, I'm down to discuss anything.</p>
+			</details>
+			<details>
+				<summary>A question not listed here:</summary>
+				<p>Contact me!</p>
+			</details>
 
 			<h2>Contact Me</h2>
 			<dl>
