The blog is going up for real now! Docker compose has been fixed for it.

--- a/src/contact.html
+++ b/src/contact.html
@@ -7,6 +7,7 @@
 		<title>About - realja.me</title>
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="shortcut icon" href="assets/icons/bloxxer.gif" />
+		w
 	</head>
 	<body>
 		<header>
@@ -25,8 +26,8 @@
 			<details>
 				<summary>"jame"?</summary>
 				<p>
-					Jame is a nickname between me and my friends, becuase it sounds funny
-					to say. (Try it!)
+					Jame is a nickname between me and my friends, because it sounds funny
+					to say.
 				</p>
 				<p>
 					When I wanted to make a website, I had a bunch of ideas for domain
