--- a/src/index.html
+++ b/src/index.html
@@ -13,30 +13,32 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a href="/blog">Blog</a>
+			<a href="/blog/index.html">Blog</a>
 			<a href="/contact.html">About</a>
 		</nav>
 		<main>
 			<h2>Quick Links</h2>
 			<dl>
 				<dt>
-					<img src="assets/icons/textarea.ico" alt="Textarea.site icon" class="icon">
+					<img
+						src="assets/icons/textarea.ico"
+						alt="Textarea.site icon"
+						class="icon"
+					/>
 					<a href="https://textarea.site">textarea.site</a>
 				</dt>
 				<dd>A simple textbox to instantly start writing.</dd>
 				<dt>
-					<img
-						src="assets/icons/github.png"
-						alt="GitHub icon"
-						class="icon"
-					/>
+					<img src="assets/icons/github.png" alt="GitHub icon" class="icon" />
 					<a href="https://github.com/AtomicChocolate">My GitHub</a>
 				</dt>
 				<dd>The place I host my code.</dd>
 			</dl>
-			<hr>
+			<hr />
 			<!-- too lazy to add a simple CSS style for this... it's temporary ;) -->
-			<p><b><i>Uhh... check back later. I'm working on things!</i></b></p>
+			<p>
+				<b><i>Uhh... check back later. I'm working on things!</i></b>
+			</p>
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
