--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a href="/blog/index.html">Blog</a>
+			<a href="/blog/">Blog</a>
 			<a href="/contact.html">About</a>
 		</nav>
 		<main>
