--- a/src/template.html
+++ b/src/template.html
@@ -14,9 +14,8 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
-			<a href="/roblox.html">Roblox</a>
-			<a href="/software.html">Programming</a>
-			<a href="/contact.html">About/Contact</a>
+			<a href="/blog/">Blog</a>
+			<a href="/contact.html">About</a>
 		</nav>
 		<main>
 			<h2>This is a Template</h2>
