--- a/src/contact.html
+++ b/src/contact.html
@@ -15,6 +15,7 @@
 		</header>
 		<nav>
 			<a href="/index.html">Home</a>
+			<a href="/blog/">Blog</a>
 			<a href="/contact.html">About</a>
 		</nav>
 		<main>
