Add .html file extension to href links in blog/categories.html

--- a/jameblog/pages/categories.html
+++ b/jameblog/pages/categories.html
@@ -9,8 +9,8 @@ permalink: /categories
 	<h2 class="page-heading">{{ page.title }}</h1>
 
 	<p>
-		List all posts by: <a href="categories">category</a> /
-		<a href="list">date</a>
+		List all posts by: <a href="categories.html">category</a> /
+		<a href="list.html">date</a>
 	</p>
 
 	{%- endif -%} {%- if site.posts.size > 0 -%}
