Add description tag metadata

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="shortcut icon" href="assets/icons/bloxxer.gif" />
-		<title>The website of Jame</title>
+		<title>realjame</title>
+		<meta
+			name="description"
+			content="A website that holds the tech projects, thoughts, guides, and whatever else from 1 person."
+		/>
+		<meta property="og:title" content="realjame" />
 	</head>
 	<body>
 		<header>
