--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,11 @@
 		<title>Template - realja.me</title>
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="shortcut icon" href="assets/icons/bloxxer.gif" />
+		<meta
+			name="description"
+			content="A website that holds the tech projects, thoughts, guides, and whatever else from 1 person."
+		/>
+		<meta property="og:title" content="realjame" />
 	</head>
 	<body>
 		<header>
