--- a/src/contact.html
+++ b/src/contact.html
@@ -18,53 +18,6 @@
 			<a href="/contact.html">About</a>
 		</nav>
 		<main>
-			<p>
-				Hello, I'm James, also known as Atomic online. Currently working on
-				making computers do funny things and learning how to do so.
-			</p>
-
-			<details>
-				<summary>"jame"?</summary>
-				<p>
-					Jame is a nickname between me and my friends, because it sounds funny
-					to say.
-				</p>
-				<p>
-					When I wanted to make a website, I had a bunch of ideas for domain
-					names. Sadly, a lot of "jame".tld names were already taken - jame.com,
-					jame.dev. Others are super expensive due to such a short domain name.
-					I had an idea to use "ja.me", but of course that was taken along with
-					all other 2-letter domain names. So, I simply added "real" to the
-					start and here we are :-)
-				</p>
-			</details>
-			<details>
-				<summary>Why a website?</summary>
-				<p>A few reasons:</p>
-				<ul>
-					<li>
-						Practice setting up a Linux machine as a webserver. I learned how to
-						use Docker and Docker Compose after doing this as well.
-					</li>
-					<li>
-						Make a personal website that's easy to link to for people to know
-						about me and my creations.
-					</li>
-					<li>
-						Probably would look good as a resume to show that I know how to make
-						websites/servers from scratch.
-					</li>
-				</ul>
-			</details>
-			<details>
-				<summary>I want to chat! Or maybe just say hi?</summary>
-				<p>Good idea! Get in touch with me, I'm down to discuss anything.</p>
-			</details>
-			<details>
-				<summary>A question not listed here:</summary>
-				<p>Contact me!</p>
-			</details>
-
 			<h2>Contact Me</h2>
 			<dl>
 				<dt>
@@ -84,9 +37,12 @@
 					<span class="icon">@</span>
 					<a href="mailto:james@realja.me">Email</a>
 				</dt>
-				<dd>As shown on the website's footer.</dd>
+				<dd>
+					As shown on the website's footer. If you're a stranger, it's the best
+					way to reach me.
+				</dd>
 			</dl>
-			<p>I don't have Facebook, Instagram, etc.</p>
+			<p>I don't have Facebook, Instagram, TikTok, etc.</p>
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
