Update social handles and add SEO tags to main website (gotta switch the main site to Jekyll some day...)

--- a/src/contact.html
+++ b/src/contact.html
@@ -9,9 +9,19 @@
 		<link rel="shortcut icon" href="assets/icons/bloxxer.gif" />
 		<meta
 			name="description"
-			content="A website that holds the tech projects, thoughts, guides, and whatever else from 1 person."
+			content="A personal website that holds tech projects, thoughts, guides, and other writings by realjame."
 		/>
 		<meta property="og:title" content="realjame" />
+		<meta name="author" content="realjame" />
+		<meta property="og:locale" content="en_US" />
+		<link rel="canonical" href="https://realja.me" />
+		<meta property="og:url" content="https://realja.me" />
+		<meta property="og:site_name" content="realja.me" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary" />
+		<meta property="twitter:title" content="realjame" />
+		<meta name="twitter:site" content="@real__jame" />
+		<meta name="twitter:creator" content="@real__jame" />
 	</head>
 	<body>
 		<header>
@@ -27,7 +37,7 @@
 			<dl>
 				<dt>
 					<img src="assets/icons/discord.png" alt="Discord Icon" class="icon" />
-					<i>Atomic#3218</i>
+					<i>realjame#3218</i>
 				</dt>
 				<dd>
 					Discord is my primary means of communication. I will notice and
@@ -51,7 +61,7 @@
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
-			<a href="https://twitter.com/real__jame">@get__real</a>
+			<a href="https://twitter.com/real__jame">@real__jame</a>
 		</footer>
 	</body>
 </html>
