--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,19 @@
 		<title>realjame</title>
 		<meta
 			name="description"
-			content="A website that holds the tech projects, thoughts, guides, and whatever else from 1 person."
+			content="A personal website that holds tech projects, thoughts, guides, and other writings by realjame."
 		/>
 		<meta property="og:title" content="realjame" />
+		<meta name="author" content="realjame" />
+		<meta property="og:locale" content="en_US" />
+		<link rel="canonical" href="https://realja.me" />
+		<meta property="og:url" content="https://realja.me" />
+		<meta property="og:site_name" content="realja.me" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary" />
+		<meta property="twitter:title" content="realjame" />
+		<meta name="twitter:site" content="@real__jame" />
+		<meta name="twitter:creator" content="@real__jame" />
 	</head>
 	<body>
 		<header>
@@ -35,19 +45,15 @@
 				<dd>A simple textbox to instantly start writing.</dd>
 				<dt>
 					<img src="assets/icons/github.png" alt="GitHub icon" class="icon" />
-					<a href="https://github.com/AtomicChocolate">My GitHub</a>
+					<a href="https://github.com/real-jame">My GitHub</a>
 				</dt>
 				<dd>The place I host my code.</dd>
 			</dl>
 			<hr />
-			<!-- too lazy to add a simple CSS style for this... it's temporary ;) -->
-			<p>
-				<b><i>Uhh... check back later. I'm working on things!</i></b>
-			</p>
 		</main>
 		<footer>
 			<a href="mailto:james@realja.me">james@realja.me</a>
-			<a href="https://twitter.com/real__jame">@get__real</a>
+			<a href="https://twitter.com/real__jame">@real__jame</a>
 		</footer>
 	</body>
 </html>
