revamps are almost done. just adding images to the blog post and finishing touches (testing docker image)

--- a/src/index.html
+++ b/src/index.html
@@ -90,5 +90,22 @@ title: "realja.me"
   <p>The blog is the main part of this site. I probably left out a couple things I've written about, after all.
     <a href="/blog">Care to take a read?</a>
   </p>
+
+  <hr>
+
+  <h2>My Button</h2>
+
+  <p>I have my own 88x31 gif button for this website! I would be humbled if you make use of it. If you do, please let me know, I'd love to see your site!</p>
+
+  <p>The button is a scene I quickly created in the old Roblox engine. I might change the button often in the future, putting the "logo" in different maps and skyboxes - right now it's just a good old baseplate and default skybox.</p>
+
+  <p>So on that note, if you put the button on your site, it might be a good idea for the image source to link directly to my site, instead of making a copy on your own server. So when I update it, your website will have the updated design!</p>
+
+  <small>Hey, I mean you can do what you want to though.</small>
+
+  <textarea readonly>
+    <a href="https://realja.me"><img src="https://realja.me/realjame.gif" alt="realja.me"></a>
+  </textarea>
+
 </div>
 {% include buttonrow.html %}
