Almost done here! All that's left is fixing the tag view page to be properly styled and image descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,8 @@ title: "realja.me"
 
   <i>This is the website of "realjame", AKA James, a programmer with some finished projects and a mountain of unfinished ones.</i>
 
-  <p>I'm primarily known for old Roblox stuff - making new games in decade-old versions of the Roblox client, or otherwise supporting such efforts. This is only the beginning. I also do general programming, currently only web development, but I am interested in other fields such as homebrew software.</p>
+  <p>I'm primarily known for old Roblox stuff - making new games in decade-old versions of the Roblox client, or otherwise supporting such efforts. This is only the beginning 😉
+    I also do general programming, currently only web development, but I am interested in other fields such as desktop and homebrew software.</p>
 
   <p>The blog is the main part of this site. I probably left out a couple things I've written about, after all.
     <a href="/blog">Care to take a read?</a>
