Update wiki name

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@ title: "realja.me"
         src="https://wiki.realja.me/images/favicon.ico"
         alt="Old Roblox Wiki icon"
         class="icon" />
-      <a href="https://wiki.realja.me">Old Roblox Wiki/Documentation</a>
+      <a href="https://wiki.realja.me">Roblox Legacy Documentation</a>
     </dt>
     <dd>A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and resources to help people make new games for classic clients in 2023.</dd>
     <dt>
