Work on a redesign to use a vertical sidebar menu design + a bunch of other stuff

--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -7,7 +7,7 @@ title: "realja.me"
         <i>realjame: Always under construction, never working, always sleeping...</i>
     </p>
 
-    <h2 class="header-band">Recent Posts</h2>
+    <h2>Recent Posts</h2>
     <ul class="post-list post-list-outline" style="margin: 0;">
         {%- assign count = 0 -%}
         {%- for post in site.posts -%}
@@ -39,7 +39,7 @@ title: "realja.me"
         {%- endfor -%}
     </ul>
     <br>
-    <h2 class="header-band">Recent Devlogs</h2>
+    <h2>Recent Devlogs</h2>
 
     <ul class="post-list post-list-outline" style="margin: 0;">
         {%- assign count = 0 -%}
@@ -70,7 +70,7 @@ title: "realja.me"
 
     <hr>
 
-    <h2 class="header-band">Quick Links</h2>
+    <h2>Quick Links</h2>
 
     <dl>
         <dt>
@@ -120,7 +120,9 @@ title: "realja.me"
         </dt>
     </dl>
 
-    <h2 class="header-band">About Me</h2>
+    <hr>
+
+    <h2>About Me</h2>
 
     <i>This is the website of "realjame", AKA James, a programmer with some finished projects and a mountain of unfinished
         ones.</i>
@@ -128,14 +130,16 @@ title: "realja.me"
     <p>
         I'm primarily known for old Roblox stuff - making new games in decade-old versions of the Roblox client, or
         otherwise supporting such efforts. This is only the beginning 😉 I also do general programming, currently only web
-                        		development, but I am interested in other fields such as desktop and homebrew software.</p>
+        		development, but I am interested in other fields such as desktop and homebrew software.</p>
 
     <p>
         The blog is the main part of this site. I probably left out a couple things I've written about, after all.
         <a href="/blog">Care to take a read?</a>
     </p>
 
-    <h2 class="header-band">My Button</h2>
+    <hr>
+
+    <h2>My Button</h2>
 
     <p>
         I have my own 88x31 gif button for this website! I would be humbled if you make use of it. If you do, please let me
@@ -150,7 +154,7 @@ title: "realja.me"
     <p>
         So on that note, if you put the button on your site, it might be a good idea for the image source to link directly
         to my site, instead of making a copy on your own server. So when I update it, your website will have the updated
-                        		design!</p>
+        		design!</p>
 
     <small>Hey, I mean you can do what you want to though.</small>
 
