Another big update chunk. Implement daily notes system and index, along with the first note on installing Ruby on Debian. Convert blog home to a standard html page and try to improve the flex layout slightly. Add TODOs with marquees. Probably more

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Projects"
+title: "projects"
 permalink: /projects
 ---
-<h1>height</h1>
+<marquee>TODO: the projects page</marquee>
