Implement icons for tags and the sidebar, rework tagcloud to be dynamic so it can be used for blog, devlog and dailynote, tagcloud now also shows post total

--- a/src/daily/index.html
+++ b/src/daily/index.html
@@ -9,30 +9,7 @@ layout: default
 </p>
 <small>*not actually daily</small>
 
-{% assign all_tags = "" %}
-
-{% for post in site.categories.dailynote %}
-    {% for tag in post.tags %}
-        {% assign all_tags = all_tags | append: tag | append: " " %}
-    {% endfor %}
-{% endfor %}
-
-{% assign tags_array = all_tags | split: " " | sort %}
-{% assign unique_tags = tags_array | uniq %}
-
-<p>
-    <b>Browse by topic:</b>
-    {% for tag in unique_tags %}
-        {% assign tag_count = 0 %}
-        {% for t in tags_array %}
-            {% if t == tag %}
-                {% assign tag_count = tag_count | plus: 1 %}
-            {% endif %}
-        {% endfor %}
-        <a href="/tags/{{ tag }}">{{ tag }}</a>
-        <b>{{ tag_count }}</b>
-    {% endfor %}
-</p>
+{% include tagcloud-simple.html category = "dailynote" %}
 
 <h2>Recent notes</h2>
 
