--- a/src/devlog/index.html
+++ b/src/devlog/index.html
@@ -4,9 +4,7 @@ title: "posts"
 permalink: /devlog
 ---
 <div class="home">
-    <marquee>TODO: get rid of stack structure for these cards</marquee>
-    {%- include tagcloud.html -%}
-    <marquee>TODO: switch to the style of tagcloud used in the daily page</marquee>
+    {%- include tagcloud.html category = "devlog" -%}
     {% include rss.html %}
 
     <ul class="post-list post-list-outline">
