Make navbar and footer pretty, work on header band effect on home page (TODO: more places)

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@ title: "realja.me"
         </dt>
     </dl>
 
-    <marquee>TODO: Could we do a side design where these quick links and gif banners are on the right for desktop?</marquee>
+    <marquee>TODO: Improve this</marquee>
 
     <h2 class="header-band">My Button</h2>
 
@@ -130,12 +130,14 @@ title: "realja.me"
     <p>
         So on that note, if you put the button on your site, it might be a good idea for the image source to link directly
         to my site, instead of making a copy on your own server. So when I update it, your website will have the updated
-                                                                                                                                                        		design!</p>
+                                                                                                                                                                                		design!</p>
 
     <small>Hey, I mean you can do what you want to though.</small>
 
     <textarea readonly>
         <a href="https://realja.me"><img src="https://realja.me/realjame.gif" alt="realja.me"></a>
     </textarea>
+
+    <marquee>TODO: Move the button section to about me(?) and make it use codeblock instead of textarea</marquee>
     {% include buttonrow.html %}
 </div>
