--- a/src/daily/index.html
+++ b/src/daily/index.html
@@ -19,7 +19,7 @@ layout: default
     <h3>
         <span class="topics">
             {% for tag in post.tags %}
-                <a href="/tags/{{ tag }}">{{ tag }}</a>
+                <a href="/tags/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
             {% endfor %}
         </span>
         <a href="{{ post.url }}">{{ post.title }}</a>
