Move blog post indexes to reusable templates, work on styling more, finish revamping home page, roll about page into contact page, start on projects/contact page

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -4,3 +4,52 @@ title: "projects"
 permalink: /projects
 ---
 <marquee>TODO: the projects page</marquee>
+<h2 class="header-band">Quick Links</h2>
+<dl>
+    <dt>
+        <img
+            src="https://wiki.realja.me/images/favicon.ico"
+            alt="Old Roblox Wiki icon"
+            class="icon">
+        <a href="https://wiki.realja.me">Roblox Legacy Documentation</a>
+    </dt>
+    <dd>
+        A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and resources to help people make
+        new games for classic clients in 2023.
+    </dd>
+    <dt>
+        <img
+            src="assets/icons/textarea.ico"
+            alt="Textarea.site icon"
+            class="icon">
+        <a href="https://textarea.site">textarea.site</a>
+    </dt>
+    <dd>A simple textbox to instantly start writing.</dd>
+    <dt>
+        <img
+            src="assets/icons/spookingout.png"
+            alt="Spooking Out icon"
+            class="icon">
+        <a href="" {% post_url /blog/2022-10-24-introducing-spooking-out %}>Spooking Out!</a>
+    </dt>
+    <dd>
+        A game made for the 2010 Roblox engine about catching ghosts.
+        <a href="{% post_url /blog/2022-11-02-spooking-out-modern-roblox-port %}">There's a port to modern Roblox too!</a>
+    </dd>
+    <dt>
+        <img
+            src="assets/icons/github.png"
+            alt="GitHub icon"
+            class="icon">
+        <a href="https://github.com/real-jame">My GitHub</a>
+    </dt>
+    <dt>
+        <img
+            src="assets/icons/twitter.png"
+            alt="Twitter icon"
+            class="icon">
+        <a href="https://twitter.com/real__jame">Follow me on Twitter!</a>
+        <a href="https://wetdry.world/@jame">(Or Mastodon!)</a>
+    </dt>
+</dl>
+THIS IS TEMPORARY
