--- a/src/daily/index.html
+++ b/src/daily/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: "daily notes"
 ---
 <h1>daily notes</h1>
 
@@ -15,14 +16,4 @@ layout: default
 
 {% include rss.html %}
 
-{% for post in site.categories.dailynote %}
-    <h3>
-        <span class="topics">
-            {% for tag in post.tags %}
-                <a href="/tags/{{ tag }}" class="topic-item pretty-button">{{ tag }}</a>
-            {% endfor %}
-        </span>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </h3>
-    <p>{{ post.excerpt }}</p>
-{% endfor %}
+{% include post-list-simple.html category = "dailynote" %}
