Add external links section to navbar, fix footer on mobile, create styling for project page cards, start writing easter egg HTML comments, probably a bunch more CSS changes

--- a/src/daily/index.html
+++ b/src/daily/index.html
@@ -2,7 +2,17 @@
 layout: default
 title: "daily notes"
 ---
-<h1>daily notes</h1>
+<!--
+this daily notes idea was inspired by a website i discovered recently that has a "today i learned" section:
+https://til.simonwillison.net/
+and according to the github repo it was inspired by this other person's TIL collection: https://github.com/jbranchaud/til
+
+i was inspired by someone who was inspired by someone else. honestly nothing better in the world to me when that kinda thing happens.
+to think that what you put out into the world has greater impact than what is immediately perceived, or even what you're aware of
+thats something to think about...
+
+oh fun fact, simon willison is the guy who made the django framework
+--><h1>daily notes</h1>
 
 <p>
     Extremely frequent brief* writings. Primarily collecting things I've learned, but there may be thoughts and other random stuff too.
