slight bit more projects work

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -3,6 +3,27 @@ layout: page
 title: "projects"
 permalink: /projects
 ---
+{% comment %} TODO: recreate Obsidian callouts https://help.obsidian.md/Editing+and+formatting/Callouts {% endcomment %}
+<div class="callout callout-info">
+    <div class="callout-title">
+        <img
+            src="../assets/silk/information.png"
+            alt=""
+            width="32"
+            height="32"
+            class="icon callout-icon">
+        <div class="callout-title-inner">Important</div>
+    </div>
+    <div class="callout-content">
+        <p>
+            Please check my
+            <a href="/resume.pdf">resume</a>
+            for professional information. I am open to work!
+        </p>
+    </div>
+
+</div>
+
 <!--
 yeah, i have a ton of regret for not being able to see projects through completion.
 in my life i always either have 0 motivation to do anything or i "hyperfocus" and basically spend whole days doing nothing but working on something.
@@ -23,9 +44,8 @@ i never talk about this stuff online
 thank you for reading. i will persevere
 --><marquee>TODO: add all the cards, add links, download button (for spooking out)</marquee>
 <div class="card card-active">
-    TODO: find an icon for here
     <h3 class="project-title"><img
-            src="../assets/silk/TODO"
+            src="../assets/silk/brick.png"
             alt=""
             width="32"
             height="32"
